# code-llm-latent-language

./: README.md  main.py  pyproject.toml
code_llm_latent_language/: data.py
code_llm_latent_language/patches/: __init__.py  deepseek.py  qwen.py
configs/: default.yaml
configs/data/: human_eval.yaml
