[project]
name = "code-llm-latent-language"
version = "0.1.0"
description = "Attempt to interpret code models hidden representations"
authors = [
    {name = "KseniaSycheva",email = "KS9270022@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "transformers (>=4.52.0,<4.54.0)",
    "datasets (>=3.0.0,<4.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "gradio (>=5.44.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
